
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int printf (char*,char*,int) ;
 char* strchr (char*,char) ;
 int strlen (char*) ;

int parse_pwd(char *in, int *pwdlen)
{
        char *ptr1,*ptr2;


        ptr1 = strchr(in,'\"');
        if (!ptr1) return(-1);
        ptr2 = strchr(ptr1+1,'\"');
        if (!ptr2) return(-1);
        *ptr2 = 0;
        *pwdlen = strlen(ptr1+1);

        if (*pwdlen==1) *pwdlen -= 1;
        printf("Home Dir = %s, Len = %d\n",ptr1+1,*pwdlen);
        return(1);
}
